--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
     "daisyui": "^4.9.0",
+    "flowbite-react": "^0.7.6",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
